# VCFormer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  LICENSE  README.md  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci.yml  docs.yml  lint.yml  mkdocs.yml
_modules/: index.html
_modules/vcformer/: vcformer.html
_sources/: index.rst.txt
docs/: conf.py  index.md
src/vcformer/: __init__.py  vcformer.py
tests/: vcformer_test.py
vcformer/: __init__.py  vcformer.py
