[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcformer"
version = "0.0.1"
authors = [
  { name="VCFormer Developers", email="nabdennur@gmail.com" },
]
description = "Read and flatten VCF data into DataFrames."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "vcf",
    "variant call format",
    "variant calling",
    "pandas",
    "polars",
    "dataframe",
    "genomics",
    "bioinformatics",
]
dependencies = [
    "bioframe",
    "oxbow",
    "pandas",
    "polars",
    "pyarrow",
    "pysam",
]

[project.urls]
"Homepage" = "https://github.com/abdenlab/VCFormer"
"Bug Tracker" = "https://github.com/abdenlab/VCFormer/issues"
